@@ -1,6 +1,14 @@
+<<<<<<< HEAD
 -Xmx8g
+=======
+-Xmx16g 
+>>>>>>> 257d88b400b8488c0398092ba9281d8c2dba4616
 --add-opens java.base/java.io=ALL-UNNAMED
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/java.util=ALL-UNNAMED
 --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
+<<<<<<< HEAD
 --enable-native-access=ALL-UNNAMED
+=======
+--enable-native-access=ALL-UNNAMED
+>>>>>>> 257d88b400b8488c0398092ba9281d8c2dba4616
